// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diffTable 1`] = `
"**Size Change:** +9 B (0%) 

**Total Size:** 17.3 kB

| Filename | Size | Change |  |
| :--- | :---: | :---: | :---: |
| \`increase.js\` | 5 kB | +2.5 kB (100.0%) | 🆘 |
| \`decrease.js\` | 2.5 kB | -2.5 kB (-50.0%) | 🏆 |
| \`added.js\` | 5 kB | +5 kB (100.0%) | 🆘 |
| \`removed.js\` | 0 B | -5 kB (-100.0%) | 🏆 |
| \`threshold.js\` | 4.5 kB | +9 B (0.2%) |  |

<details><summary>ℹ️ <strong>View Unchanged</strong></summary>

| Filename | Size | Change |
| :--- | :---: | :---: |
| \`unchanged.js\` | 300 B | 0 B |

</details>

"
`;

exports[`diffTable 2`] = `
"| Filename | Size | Change |  |
| :--- | :---: | :---: | :---: |
| \`increase.js\` | 5 kB | +2.5 kB (100.0%) | 🆘 |
| \`decrease.js\` | 2.5 kB | -2.5 kB (-50.0%) | 🏆 |
| \`added.js\` | 5 kB | +5 kB (100.0%) | 🆘 |
| \`removed.js\` | 0 B | -5 kB (-100.0%) | 🏆 |
| \`threshold.js\` | 4.5 kB | +9 B (0.2%) |  |

<details><summary>ℹ️ <strong>View Unchanged</strong></summary>

| Filename | Size | Change |
| :--- | :---: | :---: |
| \`unchanged.js\` | 300 B | 0 B |

</details>

"
`;

exports[`diffTable 3`] = `
"**Size Change:** +9 B (0%) 

**Total Size:** 17.3 kB

| Filename | Size | Change |  |
| :--- | :---: | :---: | :---: |
| \`increase.js\` | 5 kB | +2.5 kB (100.0%) | 🆘 |
| \`decrease.js\` | 2.5 kB | -2.5 kB (-50.0%) | 🏆 |
| \`unchanged.js\` | 300 B | 0 B |  |
| \`added.js\` | 5 kB | +5 kB (100.0%) | 🆘 |
| \`removed.js\` | 0 B | -5 kB (-100.0%) | 🏆 |
| \`threshold.js\` | 4.5 kB | +9 B (0.2%) |  |"
`;

exports[`diffTable 4`] = `
"**Size Change:** +9 B (0%) 

**Total Size:** 17.3 kB

| Filename | Size | Change |  |
| :--- | :---: | :---: | :---: |
| \`increase.js\` | 5 kB | +2.5 kB (100.0%) | 🆘 |
| \`decrease.js\` | 2.5 kB | -2.5 kB (-50.0%) | 🏆 |
| \`added.js\` | 5 kB | +5 kB (100.0%) | 🆘 |
| \`removed.js\` | 0 B | -5 kB (-100.0%) | 🏆 |
| \`threshold.js\` | 4.5 kB | +9 B (0.2%) |  |"
`;

exports[`diffTable 5`] = `
"**Size Change:** +9 B (0%) 

**Total Size:** 17.3 kB

| Filename | Size | Change |  |
| :--- | :---: | :---: | :---: |
| \`increase.js\` | 5 kB | +2.5 kB (100.0%) | 🆘 |
| \`decrease.js\` | 2.5 kB | -2.5 kB (-50.0%) | 🏆 |
| \`added.js\` | 5 kB | +5 kB (100.0%) | 🆘 |
| \`removed.js\` | 0 B | -5 kB (-100.0%) | 🏆 |

<details><summary>ℹ️ <strong>View Unchanged</strong></summary>

| Filename | Size | Change |
| :--- | :---: | :---: |
| \`unchanged.js\` | 300 B | 0 B |
| \`threshold.js\` | 4.5 kB | +9 B (0.2%) |

</details>

"
`;

exports[`diffTable 6`] = `
"**Size Change:** 0 B 

**Total Size:** 17.3 kB



<details><summary>ℹ️ <strong>View Unchanged</strong></summary>

| Filename | Size | Change |
| :--- | :---: | :---: |
| \`increase.js\` | 5 kB | 0 B |
| \`decrease.js\` | 2.5 kB | 0 B |
| \`unchanged.js\` | 300 B | 0 B |
| \`added.js\` | 5 kB | 0 B |
| \`removed.js\` | 0 B | 0 B |
| \`threshold.js\` | 4.5 kB | 0 B |

</details>

"
`;

exports[`diffTable 7`] = `
"**Size Change:** 0 B 

**Total Size:** 300 B



<details><summary>ℹ️ <strong>View Unchanged</strong></summary>

| Filename | Size | Change |
| :--- | :---: | :---: |
| \`unchanged.js\` | 300 B | 0 B |

</details>

"
`;
